<resources>
    <string name="app_name">FeedBack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Java Conference</string>
    <string name="nav_header_subtitle">Barcelona 2018</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="action_filter">Filter</string>
    <string name="action_unfilter">Unfilter</string>
    <string name="action_search">Search</string>
    <string name="action_exit">Exit</string>

    <!-- Main Activity -->

    <string name="talk_title">Talk Title</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="not_implemented">Not implemented.</string>
    <string name="sorry_not_connected">Sorry, device not connected.</string>
    <string name="sorry_no_local_data">Sorry, no local data available.</string>
    <string name="sorry_no_graphic_available">Sorry, no graphic available.</string>
    <string name="sorry_no_scoring_avaiable">Sorry, no scoring available.</string>
    <string name="sorry_no_room_set">Sorry, room is not set.</string>
    <string name="sorry_no_app_to_attend_this_request">There is no application installed in this device to handle this request.</string>
    <string name="sorry_could_not_insert_talk">Could not insert talk ${talk.id} ${error.message}</string>
    <string name="sorry_no_timers_to_schedule">Sorry, there are no talks scheduled for today</string>
    <string name="all_talks_processed">All talks have been processed succesfully</string>
    <string name="success_data_updated">All data updated successfully.</string>
    <string name="wrong_credentials">Wrong credentials, try again.</string>
    <string name="blank_credentials">Credentials can not be empty, try again.</string>
    <string name="turn_auto_mode_off">Mode is auto, switch to manual.</string>
    <string name="back_button_disabled">Back button is disabled.</string>
    <string name="choose_finish_to_exit">Select \'Finish\' from the lateral menu to end.</string>
    <string name="setting_timers">Setting timers ....</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>

    <!-- WelcomeFragment  -->

    <string name="next_talk">Setting schedules...</string>

    <!-- LicenseDialogFragment  -->

    <string name="license_text"><strong>Copyright &#169; 2018 JBCNConf</strong>\

\
        This source, every third party library and all external resources files\
        are licensed under the Apache License, Version 2.0 (the "License");\
        you may not use this file except in compliance with the License.\
\
        You may obtain a copy of the License at\
\
        <i>http://www.apache.org/licenses/LICENSE-2.0</i>\
\
        Unless required by applicable law or agreed to in writing, software\
        distributed under the License is distributed on an "AS IS" BASIS,\
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,\
        either express or implied.\
\
        See the License for the specific language governing permissions and\
        limitations under the License.
    </string>

    <!-- CredentialsDialogFragment  -->

    <string name="enter_password">Enter password</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="secret_password">6130</string>


    <!-- AboutUsDialogFragment  -->

    <string name="line_one">nacho@barcelonajug.org &amp; jonathan@barcelonajug.org</string>
    <string name="line_two">cristina.asensio.munoz@gmail.com &amp; jmendez1@xtec.cat</string>
    <string name="ok">OK</string>

    <!-- StatisticsFragment  -->

    <string name="email_subject">Statistics Report</string>
    <string name="email_message">Please, double click the CSV file to download. Tested with LibreOffice.</string>
    <string name="chart_description">JBCNConf 2018.</string>

    <!-- ChooseFragment -->

    <string name="filter_apply">FILTER</string>
    <string name="filter_all">ALL</string>
    <string name="sorry_no_talks">Sorry, no talks to display</string>
    <string name="showing_n_talks">talks in display</string>


    <!-- AreYouSureDialgoFragment  -->

    <string name="are_you_sure">Do you really want to quit?</string>
    <string name="tasks_finished">All tasks complete. Do you want to quit?</string>

    <string name="sorry_working_offline">Sorry, working offline.</string>

    <!-- CardView -->

    <string name="cardview_talk_title">title</string>
    <string name="cardview_speaker_name">speaker name</string>
    <string name="cardview_item_number">1</string>
    <string name="cardview_item_info">scheduleId</string>

    <!-- Lateral Menu -->
    <string name="menu_statistics">Statistics</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_send_statistics">Send CSV</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_license">Disclaimer</string>
    <string name="menu_finish">Finish</string>
    <string name="title_activity_settings">Settings</string>

    <string name="loading">Loading. Please wait...</string>
    <string name="processing">Processing. Please wait...</string>


    <string name="about_us_title">About Us</string>
    <string name="about_us_authors">#cristiasensiom &amp; #pepmenval</string>
    <string name="about_us_positive_button">Accept</string>

    <string name="alert_title">Alert</string>
    <string name="alert_message">Finish voting?</string>
    <string name="alert_positive_button">Accept</string>
    <string name="alert_negative_button">Cancel</string>


    <!-- Schedule Fragment   -->

    <string name="action_choose_date">Select date</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_vibrator_key">vibrator_key</string>
    <string name="pref_room_key">room_key</string>
    <string name="pref_auto_mode_key">auto_mode_key</string>
    <string name="pref_chart_type_key">chart_type_key</string>
    <string name="pref_email_key">email_key</string>
    <string name="pref_title_email">Email</string>
    <string name="menu_update">Upload Votes</string>
    <string name="menu_pick_date">Pick Date</string>
    <string name="pref_default_email">info@barcelonajug.org</string>

    <string name="pref_title_vibrator">Vibrator</string>
    <string name="pref_description_vibrator">Get vibration feedback</string>

    <string name="pref_title_room_name">Room name</string>
    <string name="pref_default_room_name">Room Not Defined</string>

    <string-array name="pref_room_names_titles">
        <item>Fatal 5</item>
        <item>Traci 13</item>
        <item>Warriors 3</item>
        <item>Fantastic 4</item>
        <item>Jane 11 Ives</item>
        <item>Android 16</item>
        <item>Sitges (Workshop)</item>
        <item>Llivia (Workshop)</item>
        <item>Llavorsí (Workshop)</item>
        <item>Cadaqués (Workshop)</item>
    </string-array>

    <string-array name="pref_room_names_values">
        <item>Fatal 5</item>
        <item>Traci 13</item>
        <item>Warriors 3</item>
        <item>Fantastic 4</item>
        <item>Jane 11 Ives</item>
        <item>Android 16</item>
        <item>Sitges</item>
        <item>Llivia</item>
        <item>Llavorsí</item>
        <item>Cadaqués</item>
    </string-array>

    <string name="pref_title_auto_mode">Auto Mode</string>
    <string name="pref_description_auto_mode">Voting is triggered automatically</string>

    <string name="pref_title_chart_type">Chart Type</string>
    <string name="pref_default_chart_type">Vertical Bar Chart</string>
    <string-array name="pref_chart_type_titles">
        <item>Vertical Bar Chart</item>
        <item>Horizontal Bar Chart</item>
        <item>Line Bar Chart</item>
    </string-array>

    <string-array name="pref_chart_type_values">
        <item>Vertical Bar Chart</item>
        <item>Horizontal Bar Chart</item>
        <item>Line Bar Chart</item>
    </string-array>

    <!-- Strings related to Settings ends -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
