<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/stadistics"
            android:icon="@drawable/ic_stadistics"
            android:title="@string/menu_stadistics" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/refresh"
            android:icon="@android:drawable/stat_notify_sync"
            android:title="@string/menu_refresh" />
        <item
            android:id="@+id/about_us"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about_us" />
    </group>

</menu>
